--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         />
       </form>
     </div>
+    <div class="card">
+      <h2>Woody</h2>
+      <img src="http://www.pngmart.com/files/3/Toy-Story-Woody-PNG-Photos.png" class="toy-avatar" />
+      <p>4 Likes</p>
+      <button class="like-btn" id="[toy_id]">Like ❤️</button>
+    </div>
     <p style="text-align:center">
       Andy needs your help! <button id="new-toy-btn">Add a new toy!</button>
     </p>
